Feature: Added auth code endpoint
