# app/api/v2/entities/user_with_full_info.rb
@@ -157,7 +157,6 @@ module API
         with_options(format_with: :iso_timestamp) do
           expose :created_at
           expose :updated_at
-          expose :agreement_time
         end
       end
     end
