# app/api/v2/entities/user_with_profile.rb
@@ -134,7 +134,6 @@ module API::V2
       with_options(format_with: :iso_timestamp) do
         expose :created_at
         expose :updated_at
-        expose :agreement_time
       end
     end
   end
